[package]
name = "actant-runtime"
description = "Runtime primitives: tracing/OTLP, semantic cache, prompt registry, model registry, and protocol surfaces (MCP/A2A/AP2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["trace", "cache", "prompts", "models", "protocol"]
trace    = []
cache    = []
prompts  = []
models   = []
protocol = []

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
hex            = { workspace = true }
rand           = "0.9"
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true }

[dev-dependencies]
proptest       = { workspace = true }
