[package]
name = "actant-sdk-codegen"
description = "SDK code generator: reads server metadata and emits typed clients."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "actant-sdk-codegen"
path = "src/main.rs"

[lib]
name = "actant_sdk_codegen"
path = "src/lib.rs"

[dependencies]
actant-core = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
schemars    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
