[package]
name = "actant-server"
description = "ActantDB HTTP + WebSocket server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "actant_server"
path = "src/lib.rs"

[[bin]]
name = "actantdb-server"
path = "src/bin/server.rs"

[features]
# Optional surfaces (DEVX_GAPS X88, X89). Off by default so consumers who
# only want the typed command API don't pay the introspection cost.
default     = []
auto-rest   = []
graphql     = ["auto-rest", "dep:async-graphql", "dep:async-graphql-axum"]

[dependencies]
actant-auth      = { workspace = true }
actant-core      = { workspace = true }
actant-storage   = { workspace = true }
actant-command   = { workspace = true }
actant-policy    = { workspace = true }
actant-effects   = { workspace = true }
actant-context   = { workspace = true }
actant-memory    = { workspace = true }
actant-subscribe = { workspace = true }
actant-replay    = { workspace = true }
actant-flow      = { workspace = true }
actant-reliability = { workspace = true, features = ["throttle"] }
anyhow           = { workspace = true }
axum             = { workspace = true }
axum-server      = { workspace = true }
hex              = { workspace = true }
time             = { workspace = true }
rustls           = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
clap             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sqlx             = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
futures          = { workspace = true }
prometheus       = { version = "0.13", default-features = false }
once_cell        = "1.19"
tower            = { workspace = true }
tower-http       = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
ulid             = { workspace = true }
async-graphql      = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }

[dev-dependencies]
actant-worker-protocol = { workspace = true }
async-trait            = { workspace = true }
futures                = { workspace = true }
hyper                  = { version = "1.5", features = ["full"] }
rcgen                  = "0.13"
reqwest                = { workspace = true }
time                   = { workspace = true }
tokio-tungstenite      = "0.24"
