[package]
name = "actant-subscribe"
description = "ActantDB live subscription engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
actant-storage = { workspace = true }
actant-policy  = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
