[package]
name = "actant-templates"
description = "Bundled project templates + template engine for `actant new`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actant-core    = { workspace = true }
anyhow         = { workspace = true }
include_dir    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
serde_json     = { workspace = true }
tempfile       = { workspace = true }
